[package]
name = "rt-weekend"
version = "0.1.0"
authors = ["Zixun Yu <yu645@purdue.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.16"
rand="0.8"
rayon = "1.5"
partition = "0.1"
glog = "0.1"
log = "0.4"

[dependencies.math]
path = "math"

[dependencies.geometry]
path = "geometry"

[dependencies.shape]
path = "shape"

[dependencies.scene]
path = "scene"

[dependencies.radiometry]
path = "radiometry"

[dependencies.texture]
path = "texture"

[workspace]
members = [
    "math",
    "shape",
    "geometry",
    "scene",
    "radiometry"
]

[profile.release]
debug = 1