[package]
name = "rt-weekend"
version = "0.1.0"
authors = ["Zixun Yu <yu645@purdue.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.16"
rand = "0.8"
rayon = "1.5"
partition = "0.1"
env_logger = "0.9"
log = "0.4"
itertools = "0.10.3"

[dependencies.math]
path = "math"

[dependencies.geometry]
path = "geometry"

[dependencies.shape]
path = "shape"

[dependencies.scene]
path = "scene"

[dependencies.radiometry]
path = "radiometry"

[dependencies.texture]
path = "texture"

[dependencies.material]
path = "material"

[dependencies.tlas]
path = "tlas"

[dependencies.light]
path = "light"

[workspace]
members = [
    "math",
    "shape",
    "geometry",
    "scene",
    "radiometry",
    "material",
    "tlas",
    "light",
]

[profile.release]
debug = 1
