[package]
name = "light"
version = "0.1.0"
description = "Light library module for pbrs"
edition = "2018"

[dependencies]
math = { path = "../math", version = "0.1.0"}
geometry = {path = "../geometry", version = "0.1.0"}
shape = {path = "../shape", version = "0.1.0"}
radiometry = {path = "../radiometry", version = "0.1.0"}

