[package]
name = "scene"
version = "0.1.0"
description = "Scene library module for pbrs"
edition = "2018"

[dependencies]
math = { path = "../math", version = "0.1.0"}
shape = {path = "../shape", version = "0.1.0"}
light = {path = "../light", version = "0.1.0"}
geometry = {path = "../geometry", version = "0.1.0"}
material = {path = "../material", version = "0.1.0"}
radiometry = {path = "../radiometry", version = "0.1.0"}
texture = {path = "../texture", version = "0.1.0"}
tlas = {path = "../tlas", version = "0.1.0"}
scene_parser = {path = "../scene_parser", version = "0.1.0"}

env_logger = "0.9"
log = "0.4"
ply-rs = "0.1.3"
rand = "0.8"